feat : 예약 폼 완성(자바스크립트 작업 시작)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="image/favicon.ico" />
-    <title>호텔 예약 사이트</title>
+    <title>Nostalgia</title>
     <!-- js -->
     <script src="js/header.js"></script>
     <script src="js/reserve.js"></script>
@@ -36,19 +36,17 @@
           <div class="header-nav">
             <ul>
               <li><a href="#">문의하기</a></li>
-              <li><a href="#">마이페이지</a></li>
+              <!-- <li><a href="#">마이페이지</a></li> -->
               <li><a href="#">로그인</a></li>
             </ul>
           </div>
         </div>
       </header>
       <section class="reserve">
+        <div class="reserve-img"></div>
         <div class="inner">
           <div class="reserve-top">
-            <div class="reserve-text">호텔을 편하게 예약해 보세요.</div>
-            <div class="reserve-img">
-              <img src="image/reserve-img.jpg" alt="예약 배경" />
-            </div>
+            <div class="reserve-text">마음에 꼭 드는 호텔을 찾아보세요</div>
           </div>
           <div class="reserve-menu">
             <div class="reserve-form">
