feat : 예약 캘린더 완성 인원 객실 선택 폼 시작

--- a/index.html
+++ b/index.html
@@ -1,110 +1,225 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="image/favicon.ico" />
-    <title>Nostalgia</title>
-    <!-- js -->
-    <script src="js/header.js"></script>
-    <script src="js/reserve.js"></script>
-    <!-- css -->
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- fontawesome -->
-    <script
-      src="https://kit.fontawesome.com/6159533a91.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- swiper -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- aos -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  </head>
-  <body>
-    <div class="wrap">
-      <div class="modal"></div>
-      <header class="header">
-        <div class="inner">
-          <h1 class="logo">Nostalgia</h1>
-          <div class="header-nav">
-            <ul>
-              <li><a href="#">문의하기</a></li>
-              <!-- <li><a href="#">마이페이지</a></li> -->
-              <li><a href="#">로그인</a></li>
-            </ul>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="image/favicon.ico" />
+  <title>Nostalgia</title>
+  <!-- js -->
+  <script src="js/header.js"></script>
+  <script src="js/reserve.js"></script>
+  <!-- css -->
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/6159533a91.js" crossorigin="anonymous"></script>
+  <!-- swiper -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <!-- aos -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+</head>
+
+<body>
+  <div class="wrap">
+    <div class="modal"></div>
+    <header class="header">
+      <div class="inner">
+        <h1 class="logo">Nostalgia</h1>
+        <div class="header-nav">
+          <ul>
+            <li><a href="#">문의하기</a></li>
+            <!-- <li><a href="#">마이페이지</a></li> -->
+            <li><a href="#">로그인</a></li>
+          </ul>
         </div>
-      </header>
-      <section class="reserve">
-        <div class="reserve-img"></div>
-        <div class="inner">
-          <div class="reserve-top">
-            <div class="reserve-text">마음에 꼭 드는 호텔을 찾아보세요</div>
-          </div>
-          <div class="reserve-menu">
-            <div class="reserve-form">
-              <div class="reserve-sel city-menu">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <div class="reserve-place">
-                  <p>여행지</p>
-                  <span>어디로 떠나시나요?</span>
-                  <ul>
-                    <li>서울</li>
-                    <li>제주도</li>
-                    <li>인천</li>
-                    <li>경주</li>
-                    <li>여수</li>
-                    <li>대구</li>
-                    <li>강릉</li>
-                    <li>전주</li>
-                    <li>대전</li>
-                    <li>통영</li>
-                    <li>남해</li>
-                    <li>거제</li>
-                    <li>광주</li>
-                    <li>울산</li>
-                    <li>수원</li>
-                    <li>평창</li>
-                    <li>춘천</li>
-                    <li>가평</li>
-                    <li>태안</li>
-                    <li>고양</li>
+      </div>
+    </header>
+    <section class="reserve">
+      <div class="reserve-img"></div>
+      <div class="inner">
+        <div class="reserve-top">
+          <div class="reserve-text">원하는 호텔을 찾아보세요</div>
+        </div>
+        <div class="reserve-menu">
+          <div class="reserve-form">
+            <div class="reserve-sel city-menu">
+              <i class="fa-solid fa-magnifying-glass"></i>
+              <div class="reserve-place" onclick="toggleCitySearch()">
+                <h3>여행지</h3>
+                <span>어디로 떠나시나요?</span>
+              </div>
+              <div class="city-search" id="city-search">
+                <input class="city-search-bar" type="search" placeholder="목적지" oninput="filterCities()">
+                <div class="popular-city">
+                  <h3>인기 여행지</h3>
+                  <ul id="city-list">
+                    <li onclick="selectCity('서울')">
+                      <i class="fa-solid fa-location-dot"></i>
+                      <p>
+                        <span>서울</span>
+                        <br>
+                        <span>한국</span>
+                      </p>
+                    </li>
+                    <li onclick="selectCity('도쿄')">
+                      <i class="fa-solid fa-location-dot"></i>
+                      <p>
+                        <span>도쿄</span>
+                        <br>
+                        <span>도쿄(현),일본</span>
+                      </p>
+                    </li>
+                    <li onclick="selectCity('대구')">
+                      <i class="fa-solid fa-location-dot"></i>
+                      <p>
+                        <span>대구</span>
+                        <br>
+                        <span>한국</span>
+                      </p>
+                    </li>
+                    <li onclick="selectCity('부산')">
+                      <i class="fa-solid fa-location-dot"></i>
+                      <p>
+                        <span>부산</span>
+                        <br>
+                        <span>한국</span>
+                      </p>
+                    </li>
+                    <li onclick="selectCity('후쿠오카')">
+                      <i class="fa-solid fa-location-dot"></i>
+                      <p>
+                        <span>후쿠오카</span>
+                        <br>
+                        <span>후쿠오카(현),일본</span>
+                      </p>
+                    </li>
                   </ul>
                 </div>
               </div>
-              <div class="reserve-sel day">
-                <i class="fa-regular fa-calendar-check"></i>
-                <div class="checkin">
-                  <p>체크인</p>
-                  <span>----.--.--</span>
+            </div>
+            <div class="reserve-sel day">
+              <i class="fa-regular fa-calendar-check"></i>
+              <div class="checktext-box">
+                <div class="checktext">
+                  <h3>체크인</h3>
+                  <label class="check_in_day_write">----.--.--</label>
                 </div>
-                <div class="checkout">
-                  <p>체크아웃</p>
-                  <span>----.--.--</span>
+                <div class="checktext">
+                  <h3>체크아웃</h3>
+                  <label class="check_out_day_write">----.--.--</label>
                 </div>
               </div>
-              <div class="reserve-sel per">
-                <i class="fa-solid fa-bed"></i>
-                <div class="reserve-num">
-                  <p>인원 및 객실</p>
-                  <span>0명,객실 0개</span>
+              <div class="calendar-wrap">
+                <div class="calendar-container">
+                  <div class="calendar-middle-wrap">
+                    <div class="cal_nav">
+                      <a href="javascript:;" class="nav-btn go-prev"></a>
+                      <span class="year-month start-year-month"></span>
+                      <a href="javascript:;" class="nav-btn go-next"></a>
+                    </div>
+                    <div class="cal_wrap">
+                      <div class="days">
+                        <div class="day">일</div>
+                        <div class="day">월</div>
+                        <div class="day">화</div>
+                        <div class="day">수</div>
+                        <div class="day">목</div>
+                        <div class="day">금</div>
+                        <div class="day">토</div>
+                      </div>
+                      <div class="dates start-calendar"></div>
+                    </div>
+                  </div>
+                  <div class="calendar-middle-wrap">
+                    <div class="cal_nav">
+                      <a href="javascript:;" class="nav-btn go-prev"></a>
+                      <span class="year-month last-year-month"></span>
+                      <a href="javascript:;" class="nav-btn go-next"></a>
+                    </div>
+                    <div class="cal_wrap">
+                      <div class="days">
+                        <div class="day">일</div>
+                        <div class="day">월</div>
+                        <div class="day">화</div>
+                        <div class="day">수</div>
+                        <div class="day">목</div>
+                        <div class="day">금</div>
+                        <div class="day">토</div>
+                      </div>
+                      <div class="dates last-calendar"></div>
+                    </div>
+                  </div>
+                  <div class="checkInOutInfo">
+                    <div>
+                      <p>
+                        <span>체크인</span>
+                        <label class="check_in_day"></label>
+                      </p>
+                      <p class="space">~</p>
+                      <p>
+                        <span>체크아웃</span>
+                        <label class="check_out_day"></label>
+                      </p>
+                      <div class="checkInOutBtn">
+                        <span>확인</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="reserve-sel per">
+              <i class="fa-solid fa-bed"></i>
+              <div class="reserve-num">
+                <h3>인원 및 객실</h3>
+                <span>0명, 객실 0개</span>
+              </div>
+              <div class="reserve-per-form">
+                <p>인원</p>
+                <div class="per-num">
+                  <p>성인</p>
+                  <div class="per-add">
+                    <span>
+                      <i class="fa-solid fa-minus"></i>
+                    </span>
+                    <p>0</p>
+                    <span>
+                      <i class="fa-solid fa-plus"></i>
+                    </span>
+                  </div>
+                </div>
+                <div class="per-num">
+                  <p>유아 및 아동</p>
+                  <div class="per-add">
+                    <span>
+                      <i class="fa-solid fa-minus"></i>
+                    </span>
+                    <p>0</p>
+                    <span>
+                      <i class="fa-solid fa-plus"></i>
+                    </span>
+                  </div>
+                </div>
+                <div class="reserve-per-btn">
+                  <span>확인</span>
                 </div>
               </div>
             </div>
           </div>
-          <div class="reserve-btn">
-            <span>예약</span>
-          </div>
         </div>
-      </section>
-      <footer class="footer"></footer>
-    </div>
-  </body>
+        <div class="reserve-btn">
+          <span>예약</span>
+        </div>
+      </div>
+    </section>
+
+
+    <footer class="footer"></footer>
+  </div>
+</body>
+
 </html>
